--- a/app/src/main/res/menu/nav_menu_principal.xml
+++ b/app/src/main/res/menu/nav_menu_principal.xml
@@ -3,22 +3,18 @@
 
     <item
         android:id="@+id/homeFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:icon="@drawable/home"
         android:title="Home" />
     <item
         android:id="@+id/favoritoFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:icon="@drawable/favorite"
         android:title="Favoritos" />
     <item
         android:id="@+id/adopcionFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:icon="@drawable/adoption"
         android:title="Adopcion" />
     <item
         android:id="@+id/publicacionFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:icon="@drawable/publication"
         android:title="Publicacion" />
 </menu>
