Renombre de carpetas

--- a/app/src/main/res/navigation/navigation_login.xml
+++ b/app/src/main/res/navigation/navigation_login.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/welcomeFragment"
-        android:name="com.example.dogaplication.Fragments.WelcomeFragment"
+        android:name="com.example.dogaplication.fragments.WelcomeFragment"
         android:label="fragment_welcome"
         tools:layout="@layout/fragment_welcome" >
         <action
@@ -17,7 +17,7 @@
 
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.example.dogaplication.Fragments.LoginFragment"
+        android:name="com.example.dogaplication.fragments.LoginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" />
 
