--- a/app/src/main/res/layout/fragment_adopcion.xml
+++ b/app/src/main/res/layout/fragment_adopcion.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.AdopcionFragment" >
+    tools:context=".fragments.AdopcionFragment" >
 
     <TextView
         android:id="@+id/textView3"
