--- a/app/src/main/res/layout/fragment_publicacion.xml
+++ b/app/src/main/res/layout/fragment_publicacion.xml
@@ -7,12 +7,15 @@
     android:layout_height="match_parent"
     tools:context=".fragments.PublicacionFragment" >
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Fragmento Publicacion"
+    <AutoCompleteTextView
+        android:id="@+id/autoCompleteTextView"
+        android:layout_width="323dp"
+        android:layout_height="49dp"
+        android:hint="De que raza es tu perro..."
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="345dp" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
