--- a/app/src/main/res/layout/fragment_publicacion.xml
+++ b/app/src/main/res/layout/fragment_publicacion.xml
@@ -35,92 +35,101 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.9" />
 
-    <LinearLayout
-        android:layout_width="331dp"
-        android:layout_height="583dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/guideline11"
-        app:layout_constraintEnd_toStartOf="@+id/guideline9"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toTopOf="@+id/guideline10">
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/fragPubEditTxtNombre"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Nombre del perrito" />
-
-        <EditText
-            android:id="@+id/fragPubEditTxtEdad"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Edad" />
-
-        <AutoCompleteTextView
-            android:id="@+id/fragPubAutoCompleteTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="0dp"
-            android:hint="De que raza es tu perro..."
+        <LinearLayout
+            android:layout_width="331dp"
+            android:layout_height="583dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/guideline11"
+            app:layout_constraintEnd_toStartOf="@+id/guideline9"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="@+id/guideline"
-            tools:layout_editor_absoluteY="369dp" />
+            app:layout_constraintTop_toTopOf="@+id/guideline10">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="text"
-            android:text="Sexo:" />
+            <EditText
+                android:id="@+id/fragPubEditTxtNombre"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Nombre del perrito" />
 
-        <ToggleButton
-            android:id="@+id/fragPubtoggleButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ToggleButton"
-            android:textOn="Macho"
-            android:textOff="Hembra"
-            android:hint="Sexo"
-            />
+            <EditText
+                android:id="@+id/fragPubEditTxtEdad"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Edad"
+                android:inputType="number" />
 
-        <EditText
-            android:id="@+id/fragPubEditTxtDuenio"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Nombre del dueño" />
+            <AutoCompleteTextView
+                android:id="@+id/fragPubAutoCompleteTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="0dp"
+                android:hint="De que raza es tu perro..."
+                app:layout_constraintStart_toStartOf="@+id/guideline"
+                tools:layout_editor_absoluteY="369dp" />
 
-        <EditText
-            android:id="@+id/fragPubEditTxtPeso"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="peso" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="text"
+                android:text="Sexo:" />
 
-        <EditText
-            android:id="@+id/fragPubEditTxtUrlImages"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Url images" />
+            <ToggleButton
+                android:id="@+id/fragPubtoggleButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Sexo"
+                android:text="ToggleButton"
+                android:textOff="Hembra"
+                android:textOn="Macho" />
 
-        <EditText
-            android:id="@+id/fragPubEditTxtDescrip"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Descripcion" />
+            <EditText
+                android:id="@+id/fragPubEditTxtDuenio"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Nombre del dueño" />
 
-        <EditText
-            android:id="@+id/fragPubEditTxtUbicacion"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Ubicacion" />
+            <EditText
+                android:id="@+id/fragPubEditTxtPeso"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Peso"
+                android:inputType="number" />
 
-        <Button
-            android:id="@+id/fragPubBtnPublicar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Publicar" />
+            <EditText
+                android:id="@+id/fragPubEditTxtUrlImages"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="url images" />
+
+            <EditText
+                android:id="@+id/fragPubEditTxtDescrip"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Descripcion" />
+
+            <EditText
+                android:id="@+id/fragPubEditTxtUbicacion"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Ubicacion" />
+
+            <Button
+                android:id="@+id/fragPubBtnPublicar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Publicar" />
 
 
-    </LinearLayout>
-
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
