--- a/app/src/main/res/navigation/navigation_items.xml
+++ b/app/src/main/res/navigation/navigation_items.xml
@@ -19,7 +19,10 @@
         android:label="fragment_perrito_details"
         tools:layout="@layout/fragment_perrito_details" >
 
-</fragment>
+        <argument
+            android:name="perrito"
+            app:argType="com.example.dogaplication.entities.Perrito" />
+    </fragment>
 
 
 </navigation>
