Implementacion de shared preferences y Picasso

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -53,7 +53,7 @@
             android:layout_height="10dp"></View>
 
         <EditText
-            android:id="@+id/pwdTextId"
+            android:id="@+id/fragLogTxtInPwdId"
             style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
