--- a/app/src/main/res/navigation/navigation_principal.xml
+++ b/app/src/main/res/navigation/navigation_principal.xml
@@ -28,7 +28,11 @@
         android:id="@+id/publicacionFragment"
         android:name="com.example.dogaplication.fragments.PublicacionFragment"
         android:label="fragment_publicacion"
-        tools:layout="@layout/fragment_publicacion" />
+        tools:layout="@layout/fragment_publicacion" >
+        <action
+            android:id="@+id/action_publicacionFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
     <fragment
         android:id="@+id/perfilFragment"
         android:name="com.example.dogaplication.fragments.PerfilFragment"
