--- a/app/src/main/res/layout/fragment_registrar.xml
+++ b/app/src/main/res/layout/fragment_registrar.xml
@@ -70,6 +70,19 @@
             android:layout_height="wrap_content"
             android:hint="@string/frag_reg_txtin_telefono"
             android:inputType="phone" />
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="10dp"/>
+
+        <EditText
+            android:id="@+id/fragRegTxtInUbiId"
+            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:bufferType="editable"
+            android:hint="@string/frag_reg_txtin_ubicacion"
+            android:inputType="text"/>
         <View
             android:layout_width="wrap_content"
             android:layout_height="10dp"/>
