--- a/app/src/main/res/layout/item_perrito.xml
+++ b/app/src/main/res/layout/item_perrito.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_package_item"
@@ -11,47 +12,67 @@
     app:cardElevation="8dp">
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ImageView
+        android:id="@+id/fragItemPerritoImgViewFondoTarjeta"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="250dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/perro_adopcion" />
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="150dp"
+        android:padding="15dp"
+        android:columnCount="2"
+        android:rowCount="4">
+
+        <ImageView
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:src="@drawable/huella"
+            android:layout_columnWeight="1" />
+
+        <ImageView
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:src="@drawable/huella"
+            android:layout_columnWeight="1" />
 
         <TextView
-            android:id="@+id/txtOrden"
-            android:layout_width="wrap_content"
+            android:id="@+id/fragItemPerritoTxtNombre"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textColor="@color/cardview_dark_background"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/txt_name_item"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="Nombre del perro"
+            android:layout_columnWeight="1" />
 
         <TextView
-            android:id="@+id/txt_name_item"
-            android:layout_width="wrap_content"
+            android:id="@+id/fragItemPerritoTxtRaza"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:text="contactos"
-            android:textSize="30sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="Raza del perro"
+            android:layout_columnWeight="1" />
 
         <TextView
-            android:id="@+id/txtCurso"
-            android:layout_width="wrap_content"
+            android:id="@+id/fragItemPerritoTxtSubraza"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textColor="@color/cardview_dark_background"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/txt_name_item"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="Subraza del perro"
+            android:layout_columnWeight="1" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/fragItemPerritoTxtEdad"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Edad del perro"
+            android:layout_columnWeight="1" />
 
+        <TextView
+            android:id="@+id/fragItemPerritoTxtSexo"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Sexo del perro"
+            android:layout_columnWeight="1" />
+
+    </GridLayout>
 </androidx.cardview.widget.CardView>
